--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=9864223d-351b-44d1-a371-55aa57688887&lang=ru_RU" type="text/javascript"></script>
   </head>
   <body>
     <noscript>
